Verify the whole blob when downloading chunks (https://github.com/bazelbuild/bazel/pull/29435)
This is a bug fix for the chunking implementation, where we should verify the hash of the full blob if verify downloads is specified, so we don't blindly trust SplitBlob responses.

Closes #29435.

PiperOrigin-RevId: 913555501
Change-Id: I7ffd600e53e585ad946f15c89201382343992d7e